--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <span id="element"></span>
 
           <div class="buttons">
-           <a href="https://drive.google.com/file/d/1Qa3yi2MaIjLIlxPas0_i8_ghTZ50tjVb/view?usp=drive_link" target="_blank"><button class="btn">Download Resume</button></a> 
+           <a href="https://drive.google.com/file/d/1Qa3yi2MaIjLIlxPas0_i8_ghTZ50tjVb/view?usp=drive_link" target="_blank"><button class="btn">Download CV</button></a> 
            <!-- <a href="https://github.com/Ravi24052003/Projects" target="_blank"><button class="btn">Visit <i class="fa-brands fa-github"></i></button></a>  -->
           </div>
       </div>
